@@ -1,7 +1,9 @@
 0.9
++ bug: open 2nd image in folder, click prev, click next -> doesn't load next img
 + Pane for thumbnails of all images in list (use .thumbnails?)
 	- do a better job of loading thumbnails as they are found (look at updating of app title..)
 	- make sure user can cancel thumbnails...
+	- test with an image that has moved..
 + Screenshots (a la gsnapshot) (gtk.gdk.Pixbuf.get_from_drawable)
 + code cleanup... (preload_*, animtest stuff, rename funcs)
 + remote images - load in separate thread to prevent blocking...
