@@ -3,6 +3,7 @@ v0.9 - Pending
 	+ Ability to open remote images (http and ftp)
 	+ Register viewed images with gtk's recent documents (ongardie)
 	+ Preference for opening hidden files
+	+ Add up/down keybindings to go to previous/next image
 	+ Bug: Filenames in custom actions aren't correctly escaped (Andrew)
 	+ Bug: Can't open properties on animated images
 	+ Bug: Editing a custom action creates a new action
